--- a/HW_2/HW_2.csproj
+++ b/HW_2/HW_2.csproj
@@ -122,9 +122,8 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
-    <Compile Include="Controllers\MenuMaintenanceController.cs" />
-    <Compile Include="Controllers\RoleMaintenanceController.cs" />
-    <Compile Include="Controllers\UserMaintenanceController.cs" />
+    <Compile Include="Controllers\ProfileController.cs" />
+    <Compile Include="Controllers\SystemSetupController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -143,6 +142,7 @@
     </Content>
     <Content Include="Content\home.css" />
     <Content Include="Content\login.css" />
+    <Content Include="Content\role.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -179,9 +179,12 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
-    <Content Include="Views\UserMaintenance\Index.cshtml" />
-    <Content Include="Views\RoleMaintenance\Index.cshtml" />
-    <Content Include="Views\MenuMaintenance\Index.cshtml" />
+    <Content Include="Views\SystemSetup\Index.cshtml" />
+    <Content Include="Views\SystemSetup\User.cshtml" />
+    <Content Include="Views\SystemSetup\Role.cshtml" />
+    <Content Include="Views\SystemSetup\Menu.cshtml" />
+    <Content Include="Views\Profile\Index.cshtml" />
+    <Content Include="Views\Profile\Changeprofile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
